Fixed so that the line breaks on every '\n' on the joke string.

--- a/style/joke.css
+++ b/style/joke.css
@@ -21,3 +21,9 @@ span.stars_ME span {
 	height: 16px;
 	width: 20px;
 }
+
+/*
+.joke_tag_ME textarea {
+	width: 100%;
+}
+*/
